# fintech

./: .env.example  .gitignore  CHANGES.md  DEPLOY.md  Dockerfile  Dockerfile.web  Makefile  README.md  budgetbot.db-shm  budgetbot.db-wal  move_slides.py  pyproject.toml  requirements.txt
frontend/: .env.example  AUDIT_REPORT.md  CHANGELOG.md  README.md  design-tokens.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
sample_data/: SOURCES.md  benchmark_1000_tx.csv  create.py  sample_statement.csv
scripts/: cost_estimate.py  evaluate_ai.py  evaluate_ai_accuracy.py  gen_receipts.py  generate_benchmark_data.py  init_db.py  migrate_add_dedup.py  seed_db.py  smoke.sh
src/: app.py  auth.py  catalog.py  categories.py  config.py  cost_tracker.py  handlers.py  idempotency.py  metrics.py  models.py  prompts.py  ratelimit.py  services.py  statement_parser.py  worker.py
terraform/: .gitignore  README.md  alarms.tf  alb.tf  autoscaling.tf  bootstrap.sh  cognito.tf  data.tf  deploy.sh  ecr.tf  ecs.tf  endpoints.tf  frontend.tf  iam.tf  network.tf  outputs.tf  providers.tf  rds.tf  route53.tf  sqs.tf  terraform.tfvars  valkey.tf  variables.tf  versions.tf  waf.tf
tests/: conftest.py  fakes.py  test_ai_failure_modes.py  test_async_and_usage.py  test_async_worker.py  test_auth.py  test_budget_guard.py  test_catalog.py  test_categories_sync.py  test_chat_cost.py  test_concurrency.py  test_crud.py  test_csv_flow.py  test_dedup.py  test_errors.py  test_excel_flow.py  test_idempotency.py  test_image_flow.py  test_manual_flow.py  test_needs_review_e2e.py  (+10 more)
(+82 files in other folders)
