[project]
name = "budgetbot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "fastapi>=0.110",
    "httpx>=0.27",
    "loguru>=0.7",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.10.4",
    "pillow>=10.0",
    "pydantic>=2.6",
    "pyjwt[crypto]>=2.8",
    "pypdf>=4.0",
    "pytest>=8.0",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "redis>=5",
    "reportlab>=4.0",
    "uvicorn[standard]>=0.27",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest-cov>=5.0",
    "psycopg2-binary>=2.9.12",
]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = [".venv", "_data", "frontend"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# E501 (line length) is noisy on existing prose/SQL; keep it off.
ignore = ["E501", "B008"]  # B008: FastAPI Depends/File/Header defaults are idiomatic

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = false
warn_unused_ignores = false
implicit_optional = true   # allow `x: dict = None` (gradual typing)
exclude = ["_data", "frontend", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["src/adapters/userstore.py"]  # DB drivers (PG/Dynamo/Mongo/MySQL) need live backends
